@@ -194,7 +194,11 @@
         $.ajax({
           dataType: "json",
           url: self.url,
-          success: function (data) {
+          success: function (tokenized) {
+              var data = {};
+              $.each(tokenized, function(name, value) {
+                  data[name] = self.resolve_object_field(name, value);
+              });
               cb(data);
           },
           error: function (e) { self.notify_server_error(e); }
@@ -203,34 +207,26 @@
 
     finish_load: function(data) {
         var self = this;
-        self.resolve_object_fields(data);
-        // XXX We cannot use $.extend here as it ignores undefined values,
-        // which may occur in our case.
-        if (!gocept.jsform.isUndefinedOrNull(data)) {
-            $.each(data, function(name, value) {
-                self.data[name] = value;
-            });
-        }
+        self.data = data;
         self.init_fields();
         $(self).trigger('after-load');
     },
 
-    resolve_object_fields: function(data) {
+    resolve_object_field: function(name, value) {
         var self = this;
-        $.each(self.item_maps, function(name, item_map) {
-            if (gocept.jsform.isUndefinedOrNull(data[name])) {
-                return true;
-            }
-            if (self.options[name].multiple) {
-                var value = [];
-                $.each(data[name], function(index, token) {
-                    value.push(item_map[token]);
-                });
-                data[name] = value;
-            } else {
-                data[name] = item_map[data[name]];
-            }
-        });
+        if (gocept.jsform.isUndefinedOrNull(self.options[name].source)) {
+            return value;
+        }
+        var item_map = self.item_maps[name];
+        if (self.options[name].multiple) {
+            var resolved = [];
+            $.each(value, function(index, token) {
+                resolved.push(item_map[token]);
+            });
+            return resolved;
+        } else {
+            return item_map[value];
+        }
     },
 
     get_template: gocept.jsform.get_template,
